31 May 2009: 1.0.0 Miek <miek@miek.nl>
  - 1.0.0 release! -
  * tests: more DejaGNU tests added
  * rdup: default to '.' when no directories/files are provided
  * rdup: make {c|m}-time comparison >= instead of >
  * rdup-tr: exit when -X/-Y used and we are compiled without encryption
  * rdup-up: added -vv write uid/gid and filename to stdout. See:
    http://www.miek.nl/s/8374af9844
  * rdup-up: better handle non-writable directories when restoring
  * rdup-up: implemented the -s (strip) option
  * rdup-up (fs-up.c): code cleanups and some permission settings
  * rdup-up: when recursively deleting a directory, delete the directory
    itself too when the recursion ends
  * rdup-up: avoid // when restoring to /
  * rdup-simple: add -s (strip) here too


03 May 2009: 0.9.9 Miek <miek@miek.nl>
  - bugfix release -
  * rdup-simple: use blowfish for ssh
  * rdup-up: set the owner and group for everything you create
  * tests: added dejagnu based tests; 'make check' performs the
    testing. You'll need dejagnu for it to work.


16 Apr 2009: 0.9.1 Miek <miek@miek.nl>
  - bugfixes only -
  * rdup*: code cleanups
  * rdup -c: fix the block based output (Reported by Jared Henley)
  * documentation tweaks


01 Mar 2009: 0.9.0 Miek <miek@miek.nl>
  - major (lowlevel) feature enhancements - 
  - again: internal file list change -
  * internal filelist: add uid/gid here. Why? See 
    http://www.miek.nl/blog/archives/2009/02/21/backing_up_remotely_as_a_normal_user/index.html
  * rdup*: make the -c output block based:
    Every BUFSIZE bytes a block is started.
    The last block is signaled with a size
    of 0. This eliminates the race condition,
    removes an extra stat() for every file
    and makes rdup-tr not use any temporary
    files. (Idea from: John Goerzen)
  * rdup: -c output changes for files: use blocks
  * rdup: -l switch is not needed anymore, so removed
  * rdup: add -M same as -N but check the mtime of the
    timestamp file