@@ -3,6 +3,8 @@
   * tests: more DejaGNU tests added
   * rdup: default to '.' when no directories/files are provided
   * rdup: make {c|m}-time comparison >= instead of >
+  * rdup: when a directory only does a mode change, make sure it
+    does not get listed on the deleted list
   * rdup-tr: exit when -X/-Y used and we are compiled without encryption
   * rdup-up: added -vv write uid/gid and filename to stdout. See:
     http://www.miek.nl/s/8374af9844
